tests/negative/test_type_annot_known_mismatch.orb
fnc main() () {
    (+ 1 1):ptr;
};